# megano-marketplace

./: README.md  docker-compose.yaml  pyproject.toml
app_payment/: README.md  docker-compose.yaml
app_payment/app/: Dockerfile  database.py  main.py  requirements.txt  schemas.py
marketplace/: .env-template  .pre-commit-config.yaml  Dockerfile  requirements.txt
marketplace/app_basket/: admin.py  cart.py  context_processors.py  models.py  urls.py  views.py
marketplace/app_basket/migrations/: 0001_initial.py
marketplace/app_merch/: admin.py  apps.py  comparison_service.py  discount_service.py  forms.py  import_service.py  models.py  order_service.py  payment_service.py  review_service.py  tasks.py  urls.py  viewed_products.py  views.py
marketplace/app_merch/migrations/: 0001_initial.py  0002_category.py  0003_rename_name_category_title.py  0004_auto_20230313_0728.py  0005_banner_discount_offer_product_tag.py  0006_auto_20230317_1411.py  0007_banner_primary_text_discount_is_priority.py  0008_rename_saller_offer_seller.py  0009_review.py  0010_auto_20230327_1732.py  (+12 more)
marketplace/app_settings/: admin.py  context_processors.py  models.py  singleton_model.py
marketplace/app_users/: admin.py  forms.py  models.py  urls.py  views.py
marketplace/fixtures/: admin_interface_theme_megano.json  products_ready_to_order.json
marketplace/marketplace/: celery.py  settings.py  urls.py
marketplace/static/: import_example.json
marketplace/templates/: base.html  base_mini.html  cart.html  catalog.html  index.html  seller.html
scripts/: no_docker_start_up.sh
(+81 files in other folders)
